--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,10 @@
-{}
+{
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "printWidth": 80,
+  "arrowParens": "always",
+  "endOfLine": "auto"
+}
