--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:electron": "electron .",
     "build": "npm-run-all build:electron build:react",
     "build:run": "npm-run-all build start:electron",
+    "build:css": "postcss styles.css -o public/build/styles.css",
     "build:electron": "webpack --config webpack/electron.webpack.ts --mode=production",
     "build:react": "webpack --config webpack/react.webpack.ts --mode=production",
     "package": "npm-run-all build package:dist",
@@ -26,20 +27,25 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.9.1",
+    "d3": "^7.8.4",
     "hox": "^2.1.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
+    "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.3",
     "electron": "^19.0.8",
     "electron-builder": "^23.3.2",
     "eslint": "^8.20.0",
@@ -47,7 +53,11 @@
     "eslint-plugin-react": "^7.30.1",
     "html-webpack-plugin": "^5.5.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.1.0",
+    "postcss-preset-env": "^8.3.0",
     "prettier": "^2.7.1",
+    "style-loader": "^3.3.2",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
