--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-images-uploading": "^3.1.7",
     "react-monaco-editor": "^0.52.0"
   },
   "devDependencies": {
