--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.9.1",
+    "csvtojson": "^2.0.10",
     "d3": "^7.8.4",
     "eventemitter3": "^5.0.0",
     "hox": "^2.1.0",
+    "json2csv": "^6.0.0-alpha.2",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.36.1",
     "react": "^18.2.0",
@@ -51,8 +53,8 @@
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
-    "electron": "^19.0.8",
-    "electron-builder": "^23.3.2",
+    "electron": "^18.2.3",
+    "electron-builder": "^23.0.3",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.1",
