--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@electron/remote": "^2.0.9",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@monaco-editor/loader": "^1.3.3",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.9.1",
     "csvtojson": "^2.0.10",
@@ -34,6 +35,8 @@
     "json2csv": "^6.0.0-alpha.2",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.36.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "monaco-languageclient": "^5.0.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
