chore: update build info

--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
     ],
     "win": {
       "icon": "static/avatar.png"
+    },
+    "mac": {
+      "icon": "static/avatar.png"
     }
   },
   "engines": {
