--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:electron": "webpack --config webpack/electron.webpack.ts --mode=production",
     "build:react": "webpack --config webpack/react.webpack.ts --mode=production",
     "package": "npm-run-all build package:dist",
-    "package:dist": "electron-builder --dir"
+    "package:dist": "electron-builder --dir",
+    "prettier": "prettier --write ./src"
   },
   "keywords": [],
   "author": "mnikn",
@@ -75,13 +76,13 @@
     "wait-on": "^6.0.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.15.1"
   },
   "build": {
     "appId": "com.mnikn.shoveldb",
     "productName": "Shovel DB",
     "mac": {
-      "category": "public.app-category.software"
+      "icon": "static/avatar.png"
     },
     "directories": {
       "output": "packages"
@@ -91,9 +92,6 @@
       "dist/**"
     ],
     "win": {
-      "icon": "static/avatar.png"
-    },
-    "mac": {
       "icon": "static/avatar.png"
     }
   },
