--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@monaco-editor/loader": "^1.3.3",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.9.1",
+    "@vue-reactivity/watch": "^0.2.0",
+    "@vue/reactivity": "^3.3.4",
     "csvtojson": "^2.0.10",
     "d3": "^7.8.4",
+    "dayjs": "^1.11.9",
     "eventemitter3": "^5.0.0",
     "hox": "^2.1.0",
     "json2csv": "^6.0.0-alpha.2",
