--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eventemitter3": "^5.0.0",
     "hox": "^2.1.0",
     "json2csv": "^6.0.0-alpha.2",
+    "json2toml": "^5.0.0",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.36.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
@@ -48,6 +49,7 @@
     "react-dom": "^18.2.0",
     "react-images-uploading": "^3.1.7",
     "react-monaco-editor": "^0.52.0",
+    "toml": "^3.0.0",
     "upath": "^2.0.1"
   },
   "devDependencies": {
