--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vue/reactivity": "^3.3.4",
     "csvtojson": "^2.0.10",
     "d3": "^7.8.4",
+    "d3-flextree": "^2.1.2",
     "dayjs": "^1.11.9",
     "eventemitter3": "^5.0.0",
     "hox": "^2.1.0",
